// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinCodeBox /> should match snapshot 1`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    hitSlop={
      Object {
        "bottom": 20,
        "left": 20,
        "right": 20,
        "top": 20,
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityLabel="pin-code-digit-0-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-0-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-1-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-1-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-2-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-2-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-3-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-3-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-4-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-4-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-5-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-5-touchable"
    />
  </View>
  <TextInput
    accessibilityLabel="pin-code-input-box"
    accessible={true}
    autoCorrect={false}
    autoFocus={true}
    blurOnSubmit={false}
    enablesReturnKeyAutomatically={false}
    keyboardAppearance="dark"
    keyboardType="number-pad"
    maxLength={6}
    onChangeText={[Function]}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "right": -999,
        "width": 0,
      }
    }
    testID="pin-code-input-box"
    value=""
  />
</View>
`;

exports[`<PinCodeBox /> should show two sovrin symbol if two digits are entered 1`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    hitSlop={
      Object {
        "bottom": 20,
        "left": 20,
        "right": 20,
        "top": 20,
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityLabel="pin-code-digit-0-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-0-touchable"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#777777",
              "fontSize": 26,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
    <View
      accessibilityLabel="pin-code-digit-1-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-1-touchable"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#777777",
              "fontSize": 26,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
    <View
      accessibilityLabel="pin-code-digit-2-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-2-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-3-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-3-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-4-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-4-touchable"
    />
    <View
      accessibilityLabel="pin-code-digit-5-touchable"
      accessible={false}
      center={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "borderBottomWidth": 5,
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-5-touchable"
    />
  </View>
  <TextInput
    accessibilityLabel="pin-code-input-box"
    accessible={true}
    autoCorrect={false}
    autoFocus={true}
    blurOnSubmit={false}
    enablesReturnKeyAutomatically={false}
    keyboardAppearance="dark"
    keyboardType="number-pad"
    maxLength={6}
    onChangeText={[Function]}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "right": -999,
        "width": 0,
      }
    }
    testID="pin-code-input-box"
    value="12"
  />
</View>
`;
